# fitpet-scraper

./: .aiignore  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.run/: Celery .run.xml  Celery beat.run.xml  MainApp.run.xml  app.run.xml  scrape-naver-shopping.run.xml
app/api/: naver_shopping_api.py  slack_client.py
app/api/model/: api_response_model.py  response.py
app/client/: naver_shopping_client.py  pet_friends_client.py  slack_client.py
app/client/model/: api_response_model.py
app/config/: celery.py  database.py  log.py  settings.py
app/controller/config/: exception_handler.py
app/core/: background_scheduler.py  database.py  log.py  settings.py
app/dto/: request_dto.py
app/entity/: __init__.py  keyword.py  scraped_product.py  scraped_product_detail.py  sitemap_source.py
app/enum/: channel_enum.py  error_code_enum.py
app/exception/: exception_handler.py  exceptions.py
app/repository/: base_repository.py  keyword_repository.py  scraped_product_detail_repository.py  scraped_product_repository.py  sitemap_source_repository.py
app/repository/model/: search_conditions.py
app/service/: keyword_service.py  scrape_service.py  scraped_product_service.py  sitemap_source_service.py
app/service/model/: service_models.py
app/task/: celery.py  health_task.py  scrape_tasks.py  sitemap_tasks.py  tasks.py
app/tasks/: tasks.py
app/util/: decorators.py  util_datetime.py  util_header.py  util_string.py  util_xml.py
data/: init.sql  my.cnf
test/: conftest.py
test/repository/: test_keyword_repository.py  test_repository_context.py
test/service/: conftest.py  test_keyword_service.py  test_scraped_product_service.py  test_service_context.py
test/util/: test_util_datetime.py  test_util_string.py
