[tool.poetry]
name = "fitpet-scraper"
version = "0.1.0"
description = ""
authors = ["Raynor <jonggu.woo@fitpet.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
mypy = "^1.17.1"
sqlalchemy = "^2.0.43"
httpx = "^0.28.1"
argparse = "^1.4.0"
celery = { extras = ["redis"], version = "^5.5.3" }
celery-once = "^3.0.1"
celery-types = "^0.23.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
slack-sdk = "^3.36.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pandas = "^2.3.2"
pandas-stubs = "^2.3.2.250827"
xlsxwriter = "^3.2.5"
pytz = "^2025.2"
boto3 = "^1.40.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
exclude = [
    "app/util/decorators.py"
]
