[tool.poetry]
name = "fitpet-scraper"
version = "0.1.0"
description = ""
authors = ["Raynor <jonggu.woo@fitpet.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.43"
httpx = "^0.28.1"
argparse = "^1.4.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
slack-sdk = "^3.36.0"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
pandas = "^2.3.2"
pandas-stubs = "^2.3.2.250827"
xlsxwriter = "^3.2.5"
pytz = "^2025.2"
boto3 = "^1.40.24"
sqlalchemy-utc = "^0.14.0"
pymysql = "^1.1.2"
mysqlclient = "^2.2.7"
mysql-connector-python = "^9.4.0"
cryptography = "^45.0.7"
fake-useragent = "^2.2.0"
tenacity = "^9.1.4"
apscheduler = "^3.11.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pyright = "^1.1.408"
boto3-stubs = "^1.40.22"
pytest = "^9.0.2"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
#venvPath = "."
#venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ['.']
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
